Add JVMCI benchmarks